<resources>
    <string name="app_name">AndroidProject</string>
    <string name="CustomerName">Namn</string>
    <string name="CustomerAge">Ålder</string>
    <string name="ActiveCustomer">Aktiv kund</string>
    <string name="ShowAll">Visa alla</string>
    <string name="Add">Lägg till</string>
    <string name="AboutApp">Om appen ...</string>
    <string name="AboutText">Skapad av: Peter Sundberg\n\nKurs: Android-utveckling\n\nUtbildning: Java-utvecklare\n\nUtb. företag: EC Utbildning\n\nSäte: Växjö</string>
    <string name="ApiHeadline">Skapa API</string>
    <string name="GetApi">Get</string>
    <string name="PostApi">Post</string>
    <string name="PutApi">Put</string>
    <string name="DeleteApi">Delete</string>
    <string name="APIResult">API resultat visas här</string>
    <string name="UpdateCustomer">Uppdatera kund</string>
    <string name="AddUser">Lägg till kund</string>
    <string name="ViewAllCustomers">Visa alla kunder</string>
    <string name="Api">API</string>
    <string name="AboutTheApp">Om denna app</string>
    <string name="Welcome">Välkommen!</string>
    <string name="WhatToDo">Vad vill du göra?</string>
    <string name="AllCustomers">Alla kunder</string>
    <string name="ItemInfo">Kundinfo</string>
    <string name="ItemInfoShow">Info kund</string>
    <string name="Avatar">avatar</string>
    <string name="NameLabel">Namn:</string>
    <string name="AgeLabel">Ålder:</string>
    <string name="ActiveLabel">Aktiv:</string>
    <string name="InfoActive">Aktiv:</string>
    <string name="Name">Namn</string>
    <string name="Age">Ålder</string>
    <string name="Active">Aktiv</string>
    <string name="AvatarImage">Avatar image</string>
    <string name="AddCustomer">Lägg till kund</string>
    <string name="UserId">Anv. ID</string>
    <string name="UserFullname">Namn</string>
    <string name="Email">Email</string>
    <string name="AddNewCustomer">Lägg till</string>
    <string name="DialogEditName">Uppdatera namn</string>
    <string name="ActionBarAbout">Om</string>
    <string name="ActionBarAPI">API</string>
    <string name="ActionBarExit">Avsluta app</string>
    <string name="ContextMenuShowInfo">Visa info</string>
    <string name="ContextMenuDelete">Ta bort från lista</string>
    <string name="ContextMenuUpdate">Uppdatera</string>
    <string name="UserContextMenuShowDetails">Visa detaljer</string>
    <string name="GoToStartActivity">Hem</string>

</resources>
